--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@trpc/next": "^10.37.1",
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
+    "date-fns": "^2.30.0",
     "next": "^13.5.4",
     "react": "18.2.0",
+    "react-calendar": "^4.6.0",
     "react-dom": "18.2.0",
     "superjson": "^1.13.1",
     "zod": "^3.22.4"
@@ -28,6 +30,7 @@
     "@types/eslint": "^8.44.2",
     "@types/node": "^18.16.0",
     "@types/react": "^18.2.20",
+    "@types/react-calendar": "^4.1.0",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
